--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         <h1>On all products</h1>
         <p>The styles you've been waiting are now up to 65% off!!!</p>
         <button onclick="window.location.href='registration.html' ">Shop now</button>
-        <button Id="btn_hero" class="get-discount-btn">Get Discount</button>
+        <button Id="btn_hero" class="get-discount-btn" onclick="alerted">Get Discount</button>
 
     <div class="coupon-container ">
         <div class="close">
