--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
     <section id="banner" class="section-m1">
         <h4>Repair Service</h4>
         <h2 class="text">Up to 70% Off  - All dresses & Accessories</h2>
-        <button class="btn_banner">Explore more</button>
+        <button class="btn_banner"><a href="https://www.mytheresa.com/de/en/women?log=geo&rdr_src=mag" target="_blank" >Explore more</a></button>
     </section>
     <section class="products_one" class="section-p1">
         <h2>New Arrivals</h2>
